2009-08-29  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl: Bumped the version number to 4.12.
	* *.txt:

	* scripts/tablelistEdit.tcl:   Added support for interactive cell
	* scripts/tablelistThemes.tcl: editing with the aid of the ttk::spinbox
	* scripts/tablelistUtil.tcl:   widget; added support for the themes
	  "keramik_alt" and "vista"; improved the support for a few themes.

	* scripts/tclIndex: Newly generated.

	* doc/tablelistBWidget.html:  Updated the documentation.
	* doc/tablelistCombobox.html:
	* doc/tablelist.html:
	* doc/tablelistIwidgets.html:
	* doc/tablelistMentry.html:
	* doc/tablelistTile.html:
	* doc/tablelistWidget.html:
	* doc/*.png:

	* ../../examples/tablelist/*.tcl: Appended the version number to
	  "package require tablelist(_tile)".

2009-08-15  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistWidget.tcl: Removed two update-invocations for Mac
	  OS X Aqua that were present to work around a scrolling-related bug in
	  old Mac-Tk versions but turned out to cause problems in newer ones.

2009-07-16  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistBind.tcl:   Added support for the native "Aqua-blue"
	* scripts/tablelistThemes.tcl: background, set for the header label of
	* scripts/tablelistUtil.tcl:   the sort column (for Mac-Tk with Cocoa).
	* scripts/tablelistWidget.tcl:

	* scripts/tclIndex: Newly generated.

2009-06-07  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistBind.tcl: Corrected a typo.

2009-05-29  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistWidget.tcl: Fixed a bug related to the -listvariable
	  option in disabled state.

2009-05-05  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistEdit.tcl: Small correction.

2009-05-03  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistBind.tcl: Improvements in the binding scripts
	* scripts/tablelistEdit.tcl: related to interactive cell editing.
